--- a/.gitignore
+++ b/.gitignore
@@ -447,5 +447,5 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 
-appsettings.json
-appsettings.Development.json
+API/appsettings.json
+API/appsettings.Development.json
